objects/blng__BalanceSnapShotScheduler__c.object
<CustomObject>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BalanceSnapshotType</valueSetName>
        </valueSet>
    </fields>
    <label>Balance Snapshot Scheduler</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__StartDateTime__c</columns>
        <columns>blng__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Balance Snapshot Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance Snapshot Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>